--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "decentraland-transactions",
+  "name": "testvgg",
   "version": "0.0.0-development",
   "main": "dist",
   "scripts": {
